<resources>
    <string name="app_name">Cebreja</string>
    <string name="textLogin">Login</string>
    <string name="button">Entrar</string>
    <string name="beer">Milhares de cervejas para avaliar!</string>
    <string name="login">Entrar</string>
    <string name="username">E-mail</string>
    <string name="first_name">Nome</string>
    <string name="second_name">Sobrenome</string>
    <string name="enter_full_name">Nome Completo</string>
    <string name="next">Proximo</string>
    <string name="cpf">CPF</string>
    <string name="dt_nascimento">Data Nascimento</string>
    <string name="sign_up">Inscreva-se grátis</string>
    <string name="create_account">Criar conta</string>
    <string name="signin_layer">Registrar</string>
    <string name="password_login">Senha</string>
    <string name="remember_me">Lembrar-me</string>
    <string name="forget_password">Esqueci a senha</string>
    <string name="finish_register">Finalizar Cadastro</string>
    <string name="forget_password_detail">Coloque seu email para enviarmos o código verificador!</string>
    <string name="forget_password_code_insert">Insira abaixo o codigo enviado ao seu e-mail!</string>
    <string name="new_credentials">Nova Senha!</string>
    <string name="new_credentials_detail">Insira sua nova credencial abaixo e confirme!</string>
    <string name="title_activity_forget_password_message">ForgetPasswordMessageActivity</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>