<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_fundo">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/cebreja"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_layer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/FirstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/SecondNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dt_nascimento"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/dtNascimentoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/cpfText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_layer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/EmailSignInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/editSignInTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button_entrar"
            android:padding="15dp"
            android:text="@string/signin_layer"
            android:textAllCaps="true"
            android:textColor="@android:color/white"

            android:textStyle="bold" />



    </LinearLayout>
</ScrollView>