<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpPage2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".controller.SignUpActivity_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/general_back_icon"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/todo" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:textSize="40sp" />





        </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Selecione seu gênero:"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Masculino"
                            android:checked="true"/>


                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Feminino" />


                        <RadioButton
                            android:id="@+id/others"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Outro" />
                    </RadioGroup>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/black" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Data de nascimento:"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <DatePicker
                        android:id="@+id/age_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:spinnersShown="true" />


                </LinearLayout>


                    <Button
                        android:id="@+id/signup_finish_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/black"
                        android:elevation="5dp"
                        android:text="@string/finish_register"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/signup_login_button_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="#00000000"
                        android:elevation="5dp"
                        android:fontFamily="@font/muli"
                        android:text="@string/login"
                        android:textColor="@color/black" />

    </LinearLayout>


 </ScrollView>